[gd_scene load_steps=3 format=3 uid="uid://bjt6u1qrg02to"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_1uwjf"]
[ext_resource type="AudioStream" uid="uid://bfncxj663m3nl" path="res://assets/sounds/explosion.wav" id="2_ceg2a"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_1uwjf")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="KillSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ceg2a")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
